# DocsWebServer

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup-lxc.sh
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/routers/: admin.py  auth.py  documents.py  folders.py  pages.py  sharing.py  versions.py
app/services/: document_service.py  folder_service.py  version_service.py
app/static/css/: style.css
app/static/js/: app.js  editor.js
app/templates/: admin.html  base.html  editor.html  history.html  index.html  login.html  preview.html
app/templates/partials/: document_list.html
docs/superpowers/plans/: 2026-03-19-ui-interactions.md  2026-03-19-ui-polish.md  2026-03-19-user-auth.md
docs/superpowers/specs/: 2026-03-19-drag-and-drop.md  2026-03-19-obsidian-redesign.md  2026-03-19-ui-interactions.md  2026-03-19-ui-polish.md  2026-03-19-user-auth.md
tests/: conftest.py  test_auth.py  test_dnd.py  test_documents.py  test_folders.py  test_sharing.py  test_versions.py
